config/k8s-resource/mutatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    webhook.kyverno.io/managed-by: kyverno
  name: kyverno-policy-mutating-webhook-cfg
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: kyverno-svc
      namespace: kyverno
      path: /policymutate
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: mutate-policy.kyverno.svc
  reinvocationPolicy: IfNeeded
  rules:
  - apiGroups:
    - kyverno.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusterpolicies/*
    - policies/*
    scope: '*'
  sideEffects: NoneOnDryRun
  timeoutSeconds: 10
